--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -100,6 +100,17 @@
   pages = {115--121}
 }
 
+@misc{INCAsemSQL,
+  title = {{{INCATools}}/Semantic-Sql},
+  year = {2024},
+  month = apr,
+  urldate = {2024-04-29},
+  abstract = {SQL and SQLite builds of OWL ontologies},
+  copyright = {BSD-3-Clause},
+  howpublished = {INCATools},
+  keywords = {linkml,oaklib,obofoundry,ontologies,owl,relation-graph,sparql,sql}
+}
+
 @article{maloneModelingSampleVariables2010,
   title = {Modeling Sample Variables with an {{Experimental Factor Ontology}}},
   author = {Malone, James and Holloway, Ele and Adamusiak, Tomasz and Kapushesky, Misha and Zheng, Jie and Kolesnikov, Nikolay and Zhukova, Anna and Brazma, Alvis and Parkinson, Helen},
@@ -116,6 +127,23 @@
   pmcid = {PMC2853691},
   pmid = {20200009},
   file = {/Users/robert/Zotero/storage/QDHSA8KS/Malone et al. - 2010 - Modeling sample variables with an Experimental Fac.pdf}
+}
+
+@article{pancCancer,
+  title = {Associations between Pancreatic Expression Quantitative Traits and Risk of Pancreatic Ductal Adenocarcinoma},
+  author = {Pistoni, Laura and Gentiluomo, Manuel and Lu, Ye and {L{\'o}pez de Maturana}, Evangelina and Hlavac, Viktor and Vanella, Giuseppe and Darvasi, Erika and Milanetto, Anna Caterina and Oliverius, Martin and Vashist, Yogesh and Di Leo, Milena and {Mohelnikova-Duchonova}, Beatrice and {Talar-Wojnarowska}, Renata and Gheorghe, Cristian and Petrone, Maria Chiara and Strobel, Oliver and Arcidiacono, Paolo Giorgio and Vodickova, Ludmila and Szentesi, Andrea and Capurso, Gabriele and Gajd{\'a}n, L{\'a}szl{\'o} and Malleo, Giuseppe and Theodoropoulos, George E. and Basso, Daniela and Soucek, Pavel and Brenner, Hermann and Lawlor, Rita T. and Morelli, Luca and Ivanauskas, Audrius and {PanGenEU Study Investigators} and Kauffmann, Emanuele Federico and Macauda, Angelica and Gazouli, Maria and Archibugi, Livia and Nentwich, Michael and Love{\v c}ek, Martin and Cavestro, Giulia Martina and Vodicka, Pavel and Landi, Stefano and Tavano, Francesca and Sperti, Cosimo and Hackert, Thilo and Kupcinskas, Juozas and Pezzilli, Raffaele and Andriulli, Angelo and Pollina, Luca and Kreivenaite, Edita and Gioffreda, Domenica and Jamroziak, Krzysztof and Hegyi, P{\'e}ter and Izbicki, Jakob R. and Testoni, Sabrina Gloria Giulia and Zuppardo, Raffaella Alessia and Bozzato, Dania and Neoptolemos, John P. and Malats, N{\'u}ria and Canzian, Federico and Campa, Daniele},
+  year = {2021},
+  month = aug,
+  journal = {Carcinogenesis},
+  volume = {42},
+  number = {8},
+  pages = {1037--1045},
+  issn = {1460-2180},
+  doi = {10.1093/carcin/bgab057},
+  abstract = {Pancreatic ductal adenocarcinoma (PDAC) is among the most lethal cancers. Its poor prognosis is predominantly due to the fact that most patients remain asymptomatic until the disease reaches an advanced stage, alongside the lack of early markers and screening strategies. A better understanding of PDAC risk factors is essential for the identification of groups at high risk in the population. Genome-wide association studies (GWAS) have been a powerful tool for detecting genetic variants associated with complex traits, including pancreatic cancer. By exploiting functional and GWAS data, we investigated the associations between polymorphisms affecting gene function in the pancreas (expression quantitative trait loci, eQTLs) and PDAC risk. In a two-phase approach, we analysed 13 713 PDAC cases and 43 784 controls and identified a genome-wide significant association between the A allele of the rs2035875 polymorphism and increased PDAC risk (P = 7.14 {\texttimes} 10-10). This allele is known to be associated with increased expression in the pancreas of the keratin genes KRT8 and KRT18, whose increased levels have been reported to correlate with various tumour cell characteristics. Additionally, the A allele of the rs789744 variant was associated with decreased risk of developing PDAC (P = 3.56 {\texttimes} 10-6). This single nucleotide polymorphism is situated in the SRGAP1 gene and the A allele is associated with higher expression of the gene, which in turn inactivates the cyclin-dependent protein 42 (CDC42) gene expression, thus decreasing the risk of PDAC. In conclusion, we present here a functional-based novel PDAC risk locus and an additional strong candidate supported by significant associations and plausible biological mechanisms.},
+  langid = {english},
+  pmid = {34216462},
+  keywords = {Aged,Alleles,Carcinoma Pancreatic Ductal,Case-Control Studies,Female,Genetic Predisposition to Disease,Genome-Wide Association Study,GTPase-Activating Proteins,Humans,Male,Middle Aged,Pancreatic Neoplasms,Polymorphism Single Nucleotide,Quantitative Trait Loci}
 }
 
 @article{phenotagger,
